update flink cdc test case